# routes/api.php
@@ -7,6 +7,7 @@ use App\Http\Controllers\ForgotPasswordController;
 use App\Http\Controllers\BookController;
 use App\Http\Controllers\CartController;
 use App\Http\Controllers\WishlistController;
+use App\Http\Controllers\AddressController;
 
 /*
 |--------------------------------------------------------------------------
@@ -52,4 +53,9 @@ Route::group(['middleware' => 'api'], function () {
     Route::post('addBookToWishlistByBookId', [WishlistController::class, 'addBookToWishlistByBookId']);
     Route::post('deleteBookByWishlistId', [WishlistController::class, 'deleteBookByWishlistId']);
     Route::get('getAllBooksInWishlist', [WishlistController::class, 'getAllBooksInWishlist']);
+
+    Route::post('addAddress', [AddressController::class, 'addAddress']);
+    Route::post('updateAddress', [AddressController::class, 'updateAddress']);
+    Route::post('deleteAddress', [AddressController::class, 'deleteAddress']);
+    Route::post('getAddress', [AddressController::class, 'getAddress']);
 });
